force-app/main/default/objects/Group__c/Group__c.object-meta.xml
<CustomObject>
    <description>Group master data</description>
    <label>Group Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>