force-app/main/default/objects/Group__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Team</label>
    <length>25</length>
    <type>Text</type>
</CustomField>