force-app/main/default/objects/Group__c/fields/Crm_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Crm_Group_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Crm Group Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>