force-app/main/default/objects/Group__c/fields/Group_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Group_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group Industry</description>
    <inlineHelpText>Group Industry</inlineHelpText>
    <label>Group Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Group Master</relationshipLabel>
    <relationshipName>Group_Master</relationshipName>
    <type>Lookup</type>
</CustomField>