force-app/main/default/objects/Group__c/fields/Group_Segment__c.field-meta.xml
<CustomField>
    <fullName>Group_Segment__c</fullName>
    <description>To specify the segment of the group</description>
    <label>Group Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BB1</fullName>
            </value>
            <value>
                <fullName>BB2</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CB1</fullName>
            </value>
            <value>
                <fullName>CB2</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>MB1</fullName>
            </value>
            <value>
                <fullName>MB2</fullName>
            </value>
            <value>
                <fullName>MB-Military&amp;PS</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SE1</fullName>
            </value>
            <value>
                <fullName>SE2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>