force-app/main/default/objects/Group__c/fields/GroupCompany__c.field-meta.xml
<CustomField>
    <fullName>GroupCompany__c</fullName>
    <description>Group English name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>