force-app/main/default/objects/Group__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Group Master</relationshipLabel>
    <relationshipName>Group_Master</relationshipName>
    <type>Lookup</type>
</CustomField>