force-app/main/default/objects/Group__c/listViews/Copy_of_All_Test.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Test</fullName>
    <columns>NAME</columns>
    <columns>Group_Segment__c</columns>
    <columns>ParentCompany__c</columns>
    <columns>Group_Industry_Info__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>salesforce</value>
    </filters>
    <label>Copy of All Test</label>
</ListView>